--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2349,8 +2349,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #f0ad4e;
+  border-color: #eea236;
 }
 
 .btn-primary:hover,
