--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -1,9 +1,12 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12 text-center" style="margin-top: 12%">
-			<h1 class="titleText text-center">Alchemical Alpaca</h1>
-			<h2>07-26-2014: New Moon in Leo</h2>
-			<h4>There are currently <%= tickets %> spots remaining.</h4>
+		<div class="col-xs-12 text-left" style="margin-top: 12%">
+			<h1 class="titleText">Harvest Fire</h1>
+			<h2>09-27-2014</h2>
+			<h4><%= tickets %> spots remaining.</h4>
+
+		</br>
+		</br>
 
 			<% if(tickets === 0) { %>
 				<a class="btn btn-lg btn-danger" style="pointer-events:none">Registration Closed</a>
