--- a/public/js/app/templates/Signup.html
+++ b/public/js/app/templates/Signup.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class="titleText">Alchemical Alpaca</h1>
+      <h1 class="titleText">Harvest Fire</h1>
     </div>
   </div>
   <div class="row">
