--- a/public/js/app/templates/pay.html
+++ b/public/js/app/templates/pay.html
@@ -101,7 +101,7 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="103.30" data-message="$60 - Lodging </br> $20 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 4 spots, your contribution helps cover the 7-8 other people who make the event and music happen." data-title="$100 Contribution Details" class="tt">$100.00</label>
-                        <input type="radio" name="payTier" id="103.30" class="payTier">
+                        <input type="radio" name="payTier" id="103.30" value="103.30" class="payTier">
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="113.60" data-message="$10 - “Thank You Gift” to the musicians </br> $60 - Lodging </br> $20 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 4 spots, your contribution helps cover the 7-8 other people who make the event and music happen." data-title="$110 Contribution Details" class="tt">$110.00</label>
-                        <input type="radio" name="payTier" id="113.60" class="payTier">
+                        <input type="radio" name="payTier" id="113.60" value="113.60" class="payTier">
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="134.20" data-message="$30 - “Thank You Gift” to the musicians </br> $60 - Lodging </br> $20 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 4 spots, your contribution helps cover the 7-8 other people who make the event and music happen." data-title="$130 Contribution Details" class="tt">$130.00</label>
-                        <input type="radio" name="payTier" id="134.20" class="payTier">
+                        <input type="radio" name="payTier" id="134.20" value="134.20" class="payTier">
                     </div>
                 </div>
             </div>
@@ -125,7 +125,16 @@
                 <div class="col-xs-12">
                     <div class="form-group">
                         <label for="154.80" data-message="$50 - “Thank You Gift” to the musicians </br> $60 - Lodging </br> $20 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 4 spots, your contribution helps cover the 7-8 other people who make the event and music happen." data-title="$150 Contribution Details" class="tt">$150.00 </br> If this is your first time joining us in Greenville, please consider contributing at this level.</label>
-                        <input type="radio" name="payTier" id="154.80" class="payTier">
+                        <input type="radio" name="payTier" id="154.80" value="154.80" class="payTier">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="donation_amount" data-message="$50 - “Thank You Gift” to the musicians </br> $60 - Lodging </br> $20 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 4 spots, your contribution helps cover the 7-8 other people who make the event and music happen." data-title="$150 Contribution Details" class="tt">Open Donation $</label>
+                        <input type="radio" name="payTier" class="payTier" id="open_donation">
+                        <input type="number" id="donation_amount" min=50 placeholder="50.00">
                     </div>
                 </div>
             </div>
