changes for New moon in aries 2015, background and styling to match, changed jobs and job numbers.

--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -1,12 +1,10 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12 text-left" style="margin-top: 12%">
-			<h1 class="titleText">Harvest Fire</h1>
-			<h2>09-27-2014</h2>
+		<div class="col-xs-12 text-left" style="margin-top: 2%">
+			<h1 class="titleText">New Moon in Aries</h1><h2>Springtime Celebration</h2>
+			<h2>04-18-2015</h2>
 			<h4><%= tickets %> spots remaining.</h4>
 
-		</br>
-		</br>
 
 			<% if(tickets === 0) { %>
 				<a class="btn btn-lg btn-danger" style="pointer-events:none">Registration Closed</a>
