--- a/public/js/app/templates/food.html
+++ b/public/js/app/templates/food.html
@@ -35,7 +35,7 @@
 
             <p>We will have a potluck for both the light dinner on Saturday and brunch on Sunday. Please bring as much prepared food as possible since access to the kitchen will be limited. For the light dinner please no meat, dairy, or anything that will unsettle the stomach.</p>
 
-            <p>On the left is a list of foods people are already bringing. Try to choose something not yet on the list so we don't end up with a bunch of kale and eggs! If for some reason you did not have time to bring food, don’t despair! It's more important to arrive early to help with your activity, and then go to the the nearby grocery store.</p>
+            <p>On the left is a list of foods people are already bringing. Try to choose something not yet on the list so we don't end up with a bunch of kale and eggs! If for some reason you are running late and didn't have time to buy food, don't despair! There is a great grocery store nearby with basic organic produce. For any specialty items however, making your purchases in the city ahead of time is your best bet (Tops Friendly Market  NY-32, Greenville, NY 12083).</p>
 
         </div>
     </div>
