changed jobs numbers and call time for snack prep

--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -68,10 +68,10 @@
                 <div class="form-group">
                     <% if(brunchClean === 0) { %>
                         <input type="radio" name="jobs" id="brunchClean" disabled>
-                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Brunch Cleanup" class="tt red" for="brunchClean">Kitchen and General Clean Up (<%= brunchClean %>)</label>
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Kitchen and General Clean Up" class="tt red" for="brunchClean">Kitchen and General Clean Up (<%= brunchClean %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="brunchClean">
-                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Brunch Cleanup" class="tt" for="brunchClean">Kitchen and General Clean Up (<%= brunchClean %>)</label>
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Kitchen and General Clean Up" class="tt" for="brunchClean">Kitchen and General Clean Up (<%= brunchClean %>)</label>
                     <% } %>
 
                 </div>
