corrected copy, changed ticket and job numbers, changed copy on pay html

--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -83,10 +83,10 @@
                 <div class="form-group">
                     <% if(musicSetup === 0) { %>
                         <input type="radio" name="jobs" id="musicSetup" disabled>
-                        <label data-message="Carry sound system equipment and instruments to temple, coordinate with musicians on placement and wiring." data-title="Music Setup" class="tt red" for="musicSetup">Music Setup* (<%= musicSetup %>)</label>
+                        <label data-message="You will carry the musicians' instruments from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Setup" class="tt red" for="musicSetup">Music Setup* (<%= musicSetup %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="musicSetup">
-                        <label data-message="Carry sound system equipment and instruments to temple, coordinate with musicians on placement and wiring." data-title="Music Setup" class="tt" for="musicSetup">Music Setup* (<%= musicSetup %>)</label>
+                        <label data-message="You will carry the musicians' instruments from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Setup" class="tt" for="musicSetup">Music Setup* (<%= musicSetup %>)</label>
                     <% } %>
 
                 </div>
@@ -116,10 +116,10 @@
                 <div class="form-group">
                     <% if(musicBreakdown === 0) { %>
                         <input type="radio" name="jobs" id="musicBreakdown" disabled>
-                         <label data-message="You will carry the musicians' instrument from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Breakdown" class="tt red" for="musicBreakdown">Music Breakdown (<%= musicBreakdown %>)</label>
+                         <label data-message="You will carry the musicians' instruments from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Breakdown" class="tt red" for="musicBreakdown">Music Breakdown (<%= musicBreakdown %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="musicBreakdown">
-                         <label data-message="You will carry the musicians' instrument from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Breakdown" class="tt" for="musicBreakdown">Music Breakdown (<%= musicBreakdown %>)</label>
+                         <label data-message="You will carry the musicians' instruments from their cars to the temple on Saturday, and back from the temple to their cars on Sunday. You will be on-hand to help musicians with set up and breakdown. Additionally, you will bring the sound system from the house to the temple and, on Sunday, take it back to the house. Please plan on arriving by 2pm on Saturday and not leaving earlier than 2pm on Sunday." data-title="Music Breakdown" class="tt" for="musicBreakdown">Music Breakdown (<%= musicBreakdown %>)</label>
                     <% } %>
 
                 </div>
