--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -94,10 +94,10 @@
                 <div class="form-group">
                     <% if(templeSetup === 0) { %>
                         <input type="radio" name="jobs" id="templeSetup" disabled>
-                         <label data-message="Help set up the temple with pillows, blankets, matts, and all cozy things stored downstairs." data-title="Temple Setup" class="tt red" for="templeSetup">Temple Setup* (<%= templeSetup %>)</label>
+                         <label data-message="Help set up the temple with pillows, blankets, mats, and all cozy things stored downstairs." data-title="Temple Setup" class="tt red" for="templeSetup">Temple Setup* (<%= templeSetup %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="templeSetup">
-                         <label data-message="Help set up the temple with pillows, blankets, matts, and all cozy things stored downstairs." data-title="Temple Setup" class="tt" for="templeSetup">Temple Setup* (<%= templeSetup %>)</label>
+                         <label data-message="Help set up the temple with pillows, blankets, mats, and all cozy things stored downstairs." data-title="Temple Setup" class="tt" for="templeSetup">Temple Setup* (<%= templeSetup %>)</label>
                     <% } %>
 
                 </div>
@@ -127,10 +127,10 @@
                 <div class="form-group">
                     <% if(templeBreakdown === 0) { %>
                         <input type="radio" name="jobs" id="templeBreakdown" disabled>
-                        <label data-message="Coordinate with the Point Person to make sure pillows, blankets, and matts are returned to their right place. Remove any garbage, sweep the floor, and help consolidate misplaced items etc." data-title="Temple Breakdown" class="tt red" for="templeBreakdown">Temple Breakdown (<%= templeBreakdown %>)</label>
+                        <label data-message="Coordinate with the Point Person to make sure pillows, blankets, and mats are returned to their right place. Remove any garbage, sweep the floor, and help consolidate misplaced items etc." data-title="Temple Breakdown" class="tt red" for="templeBreakdown">Temple Breakdown (<%= templeBreakdown %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="templeBreakdown">
-                        <label data-message="Coordinate with the Point Person to make sure pillows, blankets, and matts are returned to their right place. Remove any garbage, sweep the floor, and help consolidate misplaced items etc." data-title="Temple Breakdown" class="tt" for="templeBreakdown">Temple Breakdown (<%= templeBreakdown %>)</label>
+                        <label data-message="Coordinate with the Point Person to make sure pillows, blankets, and mats are returned to their right place. Remove any garbage, sweep the floor, and help consolidate misplaced items etc." data-title="Temple Breakdown" class="tt" for="templeBreakdown">Temple Breakdown (<%= templeBreakdown %>)</label>
                     <% } %>
 
                 </div>
