added warning on pay template

--- a/public/js/app/templates/pay.html
+++ b/public/js/app/templates/pay.html
@@ -81,7 +81,7 @@
                 <div class="col-xs-4">
                     <div class="form-group">
                         <label for="exp" style="white-space: nowrap;">Expiration Date</label>
-                        <input type="text" class="form-control" id="exp-month" placeholder="MM">
+                        <input type="text" class="form-control" id="exp-month" placeholder="MM (1-12, no zeros)">
                     </div>
                 </div>
                 <div class="col-xs-4">
