--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -72,7 +72,8 @@ h6 {
 #errors {
   color: #f3266f;
   font-size: 14px;
-  padding-top: 5px;
+  margin-top: -40px;
+  padding-right: 100px;
 }
 .price {
   color: #56b6d3;
