updated copy for july 2015, changed titles and background.

--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -1,9 +1,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 text-left" style="margin-top: 2%">
-			<h1 class="titleText">New Moon in Aries</h1><h2>Springtime Celebration</h2>
-			<h2>04-18-2015</h2>
-			<h4><%= tickets %> spots remaining.</h4>
+			<h1 class="titleText">Midnight Summer Moon</h1>
+			<h2 class="subTitleText">7-4-2015</h2>
+			<h4 class="subTitleText"><%= tickets %> spots remaining.</h4>
 
 
 			<% if(tickets === 0) { %>
