--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 body {
-  background: url(/img/aries.jpg) no-repeat center center fixed;
+  background: url(/img/greenstag.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -22,10 +22,14 @@ h6 {
   font-size: 14px;
   color: orange;
 }
+a {
+  color: #ccffcc;
+  text-decoration: none;
+}
 .titleText {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 100px;
-  -webkit-text-stroke: 3px black;
+  -webkit-text-stroke: 3px #CCFFCC;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text; 0 #000;
 }
@@ -34,12 +38,18 @@ h6 {
   font-size: 30px;
   color: #3c3c3c;
 }
+.subTitleText {
+  color: #ccffcc;
+}
 .tt {
   cursor: pointer;
 }
 .progress {
   background: #4d4d4d;
 }
+.progress-bar-info {
+  background-color: #ccffcc;
+ }
 .navbar-inverse {
   background: rgba(34, 34, 34, 0.9);
 }
@@ -48,11 +58,11 @@ h6 {
   overflow-y: scroll;
 }
 #food ul li {
-  color: #56b6d3;
+  color: #ccffcc;
   font-size: 16px;
 }
 .blue {
-  color: #56b6d3 !important;
+  color: #ccffcc !important;
 }
 .red {
   color: #f3266f !important;
@@ -76,7 +86,7 @@ h6 {
   padding-right: 100px;
 }
 .price {
-  color: #56b6d3;
+  color: #ccffcc;
 }
 .price small {
   font-size: 10px;
@@ -96,7 +106,7 @@ h6 {
   margin-right: 10px;
 }
 .btn.btn-primary {
-  background: #56b6d3;
+  background: #ccffcc;
   color: #222222 !important;
 }
 .btn.btn-primary a {
@@ -118,7 +128,7 @@ h6 {
   color: #979797;
 }
 .form-control {
-  background: #222222;
+  background: #000000;
   border: none;
   color: #979797;
 }
@@ -197,13 +207,13 @@ h6 {
 }
 .bwizard-steps .active {
   color: #fff;
-  background: #56b6d3;
+  background: #ccffcc;
 }
 .bwizard-steps .active .label {
   color: white;
 }
 .bwizard-steps .active:after {
-  border-left-color: #56b6d3;
+  border-left-color: #ccffcc;
 }
 .bwizard-steps a {
   color: #979797;
