--- a/public/js/app/templates/Signup.html
+++ b/public/js/app/templates/Signup.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class="titleText">Midnight Summer Moon</h1>
+      <h1 class="titleText">AFRIKA <span style="color:#ab4500;">TEMBO</span></h1>
+      <h2 class="subTitleText">A Visual Journey for the Long Life of African Elephants</h2>
     </div>
   </div>
   <div class="row">
