--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -2,36 +2,42 @@
 
     <hr>
 
-    <h3>Nominate:</h3>
 
-    <hr>
+    <div class="row" style="background-color: rgba(255,188,0,0.6);">
 
-    <div class="row">
-
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-md-6" style="padding:15px;">
             <form role="form">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="first-name" placeholder="Your First Name">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6">    
+                        <label for="first-name" style="white-space: nowrap;">First Name</label>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="first-name">
+                        </div>
+                    </div>  
+                    <div class="col-xs-12 col-sm-6 col-md-6">    
+                        <label for="last-name" style="white-space: nowrap;">Last Name</label>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="last-name">
+                        </div>
+                    </div>  
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="last-name" placeholder="Your Last Name">
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-6">    
+                        <label for="email" style="white-space: nowrap;">Email</label>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                    </div>  
                 </div>
             </form>
         </div>
+        
+        <div class="col-xs-12 col-sm-6" style="background-color:rgba(171,69,0,0.6);padding:10px;">
 
-        <div class="col-xs-12 col-sm-6">
-            <h6>PLEASE fill out ALL fields on this site (including picking an activity and writing in a food or dish) or you will not receive your confirmation email and directions!</h6>
-
-            <p>Your confirmation will be sent to the email you provide. Your information will not be distributed to any corporate entities, government agencies, multidimensional beings, or sentient robots.</p>
+            <p class="details-description">Welcome to our donation platform, please be sure to fill out all fields and choose a donation amount in order to be approved, thank you.</p>
 
         </div>
+
     </div>
-
-    <form>
-
-    </form>
 
 </div>
