--- a/public/js/app/templates/wizard.html
+++ b/public/js/app/templates/wizard.html
@@ -2,23 +2,16 @@
 
     <ol id="wizard-view-tabs" class="bwizard-steps clearfix"></ol>
 
-    <hr>
 
-    <div class="progress">
-        <div class="progress-bar progress-bar-info bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-            <span class="sr-only">20% Complete</span>
-        </div>
-    </div>
 
     <div id="wizard-view-container"></div>
 
-    <hr>
 
     <!--
     <div id="errors" class="pull-left" style="display:none;"></div>
     -->
     
-    <ul class="wizard-pager bwizard-buttons">
+<!--     <ul class="wizard-pager bwizard-buttons">
         <li class="pull-right btn btn-primary li-nextView" role="button">
             <a class="btn-nextView" href="#">Next →</a>
         </li>
@@ -26,5 +19,5 @@
             <a class="btn-previousView" href="#">← Previous</a>
         </li>
     </ul>
-
+ -->
 </div>
