--- a/public/css/blue.css
+++ b/public/css/blue.css
@@ -7,7 +7,7 @@
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(orange.png) no-repeat;
+    background: url(black.png) no-repeat;
     border: none;
     cursor: pointer;
     float: left;
@@ -49,7 +49,7 @@
        only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-blue,
     .iradio_flat-blue {
-        background-image: url(orange@2x.png);
+        background-image: url(black@2x.png);
         -webkit-background-size: 176px 22px;
         background-size: 176px 22px;
     }
