--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -1,17 +1,34 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12 text-left" style="margin-top: 2%">
-			<h1 class="titleText">Midnight Summer Moon</h1>
-			<h2 class="subTitleText">7-4-2015</h2>
-			<h4 class="subTitleText"><%= tickets %> spots remaining.</h4>
+		<div class="col-xs-12">
+			<h1 class="titleText">AFRIKA <span style="color:#ab4500;">TEMBO</span></h1>
+			<h2 class="subTitleText">A Visual Journey for the Long Life of African Elephants</h2>
 
 
-			<% if(tickets === 0) { %>
-				<a class="btn btn-lg btn-danger" style="pointer-events:none">Registration Closed</a>
-			<% } else { %>
-				<a href="#signup" class="btn btn-lg btn-warning">Get yours now!</a>
-			<% } %>
+			<div class="row">
 
+				<div class="col-xs-12 col-sm-10 landing-blurb">
+
+					<P>AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz in collaboration with the <span style="font-style:italic">African Wildlife Foundation</span>. During one month in Tanzania the team will produce a web series and a visual journal about elephant poaching and its impact on the economy and ecosystem.<br/>
+					<br/>
+					AFRIKA TEMBO is an urgent call to share the stories of African people who are witnessing new models of development that can be civic examples to the world. Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet so that we can call ourselves responsible citizens, who participate in solutions to local and global issues that ultimately are connected and affects each one of us.<br/>
+					<br/>
+					The documentary production has been made possible by the support of The World Bank but is still in need of funding. The clock is ticking and AFRIKA TEMBO has 30 days left to find the support it needs to complete the web series.<br/>
+					<br/>
+					Join the efforts to protect african elephants and be part of the team showing that every voice counts!</P>
+
+				</div>
+
+			</div>
+
+			<div class="row">
+					<a href="/afrika_tembo.pdf" class="btn btn-lg btn-warning" style="margin-right:15px">LEARN MORE</a>
+					<% if(tickets === 0) { %>
+						<a class="btn btn-lg btn-danger" style="pointer-events:none">Registration Closed</a>
+					<% } else { %>
+						<a href="#signup" class="btn btn-lg btn-warning">DONATE</a>
+					<% } %>
+			</div>
 		</div>
 	</div>
 </div>
