--- a/public/js/app/templates/pay.html
+++ b/public/js/app/templates/pay.html
@@ -2,34 +2,30 @@
 
     <hr>
 
-    <h3>Donate:</h3>
+    <div class="row" style="background-color: rgba(255,188,0,0.6);">
 
-    <hr>
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 donate-box" style="padding:15px 15px 0 15px;">
 
-    <div class="row">
-
-        <div class="col-xs-12 col-sm-8">
-
-             <div class="row">
-                <div class="col-xs-12 col-sm-3">
+             <div class="row" style="padding-bottom:20px;">
+                <div class="col-xs-6 col-sm-6 col-md-3" style="padding-right:0;">
                     <div class="form-group">
                         <label for="visa" style="white-space: nowrap;">Visa</label>
                          <input type="radio" name="cards" id="visa" class="cards">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-6 col-sm-6 col-md-3" style="padding-right:0;">
                     <div class="form-group">
                         <label for="visa" style="white-space: nowrap;">MasterCard</label>
                          <input type="radio" name="cards" id="mastercard" class="cards">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-6 col-sm-6 col-md-3" style="padding-right:0;">
                     <div class="form-group">
                         <label for="type" style="white-space: nowrap;">AMEX</label>
                          <input type="radio" name="cards" id="amex" class="cards">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-6 col-sm-6 col-md-3" style="padding-right:0;">
                     <div class="form-group">
                         <label for="type" style="white-space: nowrap;">Discover</label>
                          <input type="radio" name="cards" id="discover" class="cards">
@@ -37,134 +33,85 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <label for="first-name" style="white-space: nowrap;">Cardholder's Name</label>
+            <div class="row" style="padding-bottom:20px;">
+                <div class="col-xs-6 col-sm-6 col-md-3" style="padding-right:0;">
                     <div class="form-group">
+                        <label for="first-name" style="white-space: nowrap;">Cardholder's Name</label>
                         <input type="text" class="form-control" id="first_name" placeholder="First Name">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-6 col-sm-6 col-md-3">
                     <div class="form-group">
-                        <label for="first-name" style="visibility:hidden">.</label>
+                        <label for="last-name" style="white-space: nowrap;opacity:0;">Last name</label>
                         <input type="text" class="form-control" id="last_name" placeholder="Last Name">
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
+                        <div class="form-group">
+                            <label for="cc" style="white-space: nowrap;">Card Number</label>
+                            <input type="text" class="form-control" id="cc-1" placeholder="0000">
+                        </div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
+                        <div class="form-group">
+                            <label for="cc" style="visibility:hidden">.</label>
+                            <input type="text" class="form-control" id="cc-2" placeholder="0000">
+                        </div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
+                        <div class="form-group">
+                            <label for="cc" style="visibility:hidden">.</label>
+                            <input type="text" class="form-control" id="cc-3" placeholder="0000">
+                        </div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
+                        <div class="form-group">
+                            <label for="cc" style="visibility:hidden">.</label>
+                            <input type="text" class="form-control" id="cc-4" placeholder="0000">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <div class="col-xs-3">
-                    <div class="form-group">
-                        <label for="cc" style="white-space: nowrap;">Card Number</label>
-                        <input type="text" class="form-control" id="cc-1" placeholder="0000">
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="form-group">
-                        <label for="cc" style="visibility:hidden">.</label>
-                        <input type="text" class="form-control" id="cc-2" placeholder="0000">
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="form-group">
-                        <label for="cc" style="visibility:hidden">.</label>
-                        <input type="text" class="form-control" id="cc-3" placeholder="0000">
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="form-group">
-                        <label for="cc" style="visibility:hidden">.</label>
-                        <input type="text" class="form-control" id="cc-4" placeholder="0000">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-3 col-sm-3 col-md-3">
                     <div class="form-group">
                         <label for="exp" style="white-space: nowrap;">Expiration Date</label>
                         <input type="text" class="form-control" id="exp-month" placeholder="M (1-12)">
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
                     <div class="form-group">
                         <label for="exp" style="visibility:hidden">.</label>
                         <input type="text" class="form-control" id="exp-year" placeholder="YYYY">
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
                     <div class="form-group">
                         <label for="cvv" style="white-space: nowrap;">CVV</label>
                         <input type="text" class="form-control" id="cvv" placeholder="CVV">
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="103.30" data-message="$55 - Lodging </br> $25 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 2 spots, your contribution helps cover the 5-7 other people who make the event and music happen." data-title="$100 NIGREDO - Contribution Details" class="tt">$100.00</label>
-                        <input type="radio" name="payTier" id="103.30" value="103.30" class="payTier">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="113.60" data-message="$10 - “Thank You Gift” to the musicians </br> $55 - Lodging </br> $25 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 2 spots, your contribution helps cover the 5-7 other people who make the event and music happen." data-title="$110 ALBEDO - Contribution Details" class="tt">$110.00</label>
-                        <input type="radio" name="payTier" id="113.60" value="113.60" class="payTier">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="134.20" data-message="$30 - “Thank You Gift” to the musicians </br> $55 - Lodging </br> $25 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 2 spots, your contribution helps cover the 5-7 other people who make the event and music happen." data-title="$130 CITRINITAS - Contribution Details" class="tt">$130.00</label>
-                        <input type="radio" name="payTier" id="134.20" value="134.20" class="payTier">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="154.80" data-message="$50 - “Thank You Gift” to the musicians </br> $55 - Lodging </br> $25 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 2 spots, your contribution helps cover the 5-7 other people who make the event and music happen." data-title="$150 RUBEDO - Contribution Details" class="tt">$150.00</label>
-                        <input type="radio" name="payTier" id="154.80" value="154.80" class="payTier">
-                        <h6>If this is your first time joining us in Greenville, please consider contributing at this level.</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4">
-                    <div class="form-group">
-                        <label for="openSelector" data-message="$50+ - “Thank You Gift” to the musicians </br> $55 - Lodging </br> $25 - Tea </br> $10 - Covers Musicians' Gas </br> $10 - Production (altar, decor, lodging for musicians and organizers*) </br></br> *Bruce, our host, generously donates 2 spots, your contribution helps cover the 5-7 other people who make the event and music happen." data-title="OPEN - Contribution Details" class="tt">OPEN DONATION</label>
-                        <input type="radio" name="payTier" id="openSelector" value="154.80">
-                        <input type="number" name="payTier" id="open" class="payTier form-control" placeholder="150+" min="154.80">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-3 col-sm-3 col-md-3" style="padding-left:0;">
                     <button id="donate" class="btn btn-primary pull-right" style="margin-top:20px;"><i class="fa fa-heart"></i> Donate</button>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
+
+                <div class="col-xs-12 col-sm-12 col-md-12" style="padding:0">
                     <div id="errors" style="display:none;"></div>
                 </div>
-            </div>
 
+
+            </div>
         </div>
 
 
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-sm-4" style="background-color:rgba(171,69,0,0.6);padding:10px;">
 
-            <p>Almost done! Donations start at $100 (Paypal's processing fee is 2.9% + $0.30) to cover basics for each attendee; any contribution beyond that is a 'thank you gift' to our musicians. Please note that there is no exchange for donating more than $100 and that the handful of rooms will still be assigned on a first-come-first-served basis.</br></br>
-            Your credit card information is secured by an SSL (Secure Socket Layer) connection to Paypal, where your donation will be processed. All your sensitive information is encrypeted when it leaves your browser :)</p>
-
-            <hr>
-
-            <h4 class="payTier-title"></h4>
-            <p class="payTier-description"></p>
+            <p class="pay-description">Your credit card information is secured by an SSL (Secure Socket Layer) connection to Paypal, where your donation will be processed (Paypal's processing fee is 2.9% + $0.30).</br></br>
+            Your generous support means a lot to us. We’re so grateful to work on this project and have the opportunity to bring it to reality.</p>
 
         </div>
     </div>
+
 
 </div>
