put nav buttons back and styled, added credit to background jpg, reduced size on landing blurb, added cc to self on mail api

--- a/public/js/app/templates/wizard.html
+++ b/public/js/app/templates/wizard.html
@@ -11,13 +11,13 @@
     <div id="errors" class="pull-left" style="display:none;"></div>
     -->
     
-<!--     <ul class="wizard-pager bwizard-buttons">
-        <li class="pull-right btn btn-primary li-nextView" role="button">
+     <ul class="wizard-pager bwizard-buttons">
+        <li class="pull-right btn btn-lg btn-warning li-nextView" role="button" style="margin-right:-15px;margin-left:30px;">
             <a class="btn-nextView" href="#">Next →</a>
         </li>
-        <li class="pull-right btn btn-primary li-previousView" role="button">
+        <li class="pull-right btn btn-lg btn-warning li-previousView" role="button" style="margin-right:-15px;">
             <a class="btn-previousView" href="#">← Previous</a>
         </li>
     </ul>
- -->
+ 
 </div>
