--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -30,6 +30,7 @@ a, a:hover, a:visited, a:active {
 }
 a:-webkit-any-link {
   text-decoration: none;
+  color: #ffffff;
 }
 .titleText {
   font-family: "Futura-CondensedMedium", sans-serif;
@@ -55,7 +56,7 @@ a:-webkit-any-link {
   background-color: rgba(255,188,0,0.6);
   padding: 25px 10px 0px 10px;
   margin: 5px 0 10px 0;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 20px;
   text-align: justify;
   color: #000000;
