--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 body {
-  background: url(/img/AFRIKATEMBO_BACKGROUNDPICTURE-2.jpg) no-repeat center center fixed;
+  background: url(/img/AFRIKATEMBO_BACKGROUNDPICTURE-2.jpg) no-repeat right center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
